--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name= "viewport" content="width=device-widtch, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800&display=swap" rel="stylesheet"> 
   
     <title>Cardapio Digital</title>
   </head>
